// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button primary 1`] = `
<div>
  <button
    class="button button--primary"
  />
</div>
`;

exports[`button secondary 1`] = `
<div>
  <button
    class="button button--secondary"
  />
</div>
`;
